--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react-native-image-crop-picker": "^0.33.1",
     "react-native-image-picker": "^4.0.3",
     "react-native-image-resizer": "^1.4.4",
+    "react-native-linear-gradient": "^2.5.6",
     "react-native-otp": "^1.0.0",
     "react-native-otp-inputs": "^6.0.0",
     "react-native-paper": "^4.9.1",
